fix: remove cancelLinkPreferenc API in MPS
